--- a/minil.toml
+++ b/minil.toml
@@ -1,5 +1,5 @@
-name = "Recurring-Process"
-# badges = ["travis"]
+name = "Continual-Process"
+badges = ["travis"]
 authority="cpan:JASEI"
 
 module_maker="ModuleBuildTiny"
